# advent

./: Cargo.toml
src/: day_2.rs  day_3.rs  day_4.rs  day_5.rs  main.rs
year_2020/: Cargo.toml
year_2020/src/: day_1.rs  day_3.rs  day_4.rs  day_5.rs  main.rs
year_2021/: Makefile  README.md
year_2021/src/: Day1.idr  Day2.idr  Main.idr  Util.idr
